# guimp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  author  guimp  guimp_cmake  guimp_test
libui/: CMakeLists.txt  Makefile
libui/documentation/ui_draw_event/: ui_el_draw_event.c
libui/documentation/ui_el/: ui_el_scroll_menu.txt
libui/documentation/ui_prefab/: ui_prefab_get_relative_pos.txt  ui_prefab_get_relative_size.txt  ui_prefab_scroll_menu.txt
libui/include/: libui.h
libui/includes/: libui.h
libui/src/: CMakeLists.txt  WIPui_el_set_pos.c  ui_create_env.c  ui_create_frame.c  ui_create_sur.c  ui_create_win.c  ui_deinit_enviroment.c  ui_el_add_child.c  ui_el_free.c  ui_el_init.c  ui_event_add.c  ui_event_add_listener.c  ui_event_init.c  ui_event_invoke.c  ui_exit.c  ui_exit_on_error.c  ui_exit_with_msg.c  ui_get_events.c  ui_init_enviroment.c  ui_log_mouse_motion.c  ui_loop.c  ui_main_add_window.c  ui_main_find_window_by_id.c  ui_main_handle_event.c  ui_main_handle_key_down.c  ui_main_handle_key_up.c  ui_main_handle_quit.c  ui_main_handle_window_event.c  ui_main_init.c  ui_main_loop.c  ui_main_remove_window_by_id.c  ui_sdl_deinit.c  ui_set_pixel.c  ui_win_close.c  ui_win_create.c  ui_win_init.c
libui/src/TRASH/: WIPui_el_set_size.c  ui_create_env.c  ui_create_win.c  ui_exit_with_msg.c  ui_main_handle_key_down.c  ui_main_handle_key_up.c  ui_main_handle_mouse_motion.c  ui_set_pixel.c
libui/src/bfs/: CMakeLists.txt  bfs_for_draw.c  bfs_for_find_el_by_id.c  bfs_for_raycast.c  bfs_for_resize.c  bfs_iter.c  queue.c
libui/src/ui_cursor/: CMakeLists.txt  ui_cursor_from.c  ui_cursor_from_el_data.c  ui_cursor_init.c  ui_cursor_to_default.c
libui/src/ui_draw_events/: CMakeLists.txt  ui_el_draw_event.c
libui/src/ui_el/: CMakeLists.txt  ui_el_add_child.c  ui_el_add_texture.c  ui_el_add_texture_from_file_dialog.c  ui_el_add_texture_from_main_by_id.c  ui_el_begin_drag.c  ui_el_change_pos.c  ui_el_change_pos_for_resize.c  ui_el_change_size.c  ui_el_change_size_for_resize.c  ui_el_children_set_default.c  ui_el_create_modal_ok.c  ui_el_create_modal_ok_cancel.c  ui_el_create_modal_window.c  ui_el_create_texture.c  ui_el_create_texture_from_surface.c  ui_el_default_pointer_enter.c  ui_el_default_pointer_exit.c  ui_el_default_resize.c  ui_el_destroy.c  ui_el_destroy_children.c  ui_el_drag.c  ui_el_end_drag.c  ui_el_event_children_set_default.c  ui_el_event_default_draw.c  ui_el_event_default_pointer_enter.c  ui_el_event_default_pointer_exit.c  ui_el_event_default_resize.c  ui_el_event_drag.c  ui_el_event_menu_resize.c  ui_el_event_scroll_menu.c  ui_el_event_set_texture.c  ui_el_event_show_child.c  ui_el_event_switch_radio.c  ui_el_free.c  ui_el_get_current_texture.c  ui_el_get_texture_by_id.c  ui_el_init.c  ui_el_init_opener_el.c  ui_el_load_surface_from.c  (+36 more)
libui/src/ui_event/: CMakeLists.txt  ui_event_add_listener.c  ui_event_add_listener_front.c  ui_event_clear.c  ui_event_destroy.c  ui_event_init.c  ui_event_invoke.c
libui/src/ui_file/: CMakeLists.txt  ui_file_find_last_slash.c  ui_file_open_file_dialog.c  ui_file_parse_path.c  ui_file_save_file_dialog.c  ui_find_last_slash.c  ui_open_file_dialog.c  ui_parse_path.c  ui_save_file_dialog.c  ui_save_surface.c
libui/src/ui_jtoc/: CMakeLists.txt  ui_el_from_json.1.c  ui_el_from_json.c  ui_el_get_and_setup_json.c  ui_el_pref_modal_win.c  ui_el_pref_text.c  ui_get_event_by_name.c  ui_jtoc_el_from_json.c  ui_jtoc_el_get_and_setup_json.c  ui_jtoc_el_pref_modal_win.c  ui_jtoc_el_pref_text.c  ui_jtoc_main_from_json.c  ui_jtoc_utils.c  ui_jtoc_win_from_json.c  ui_main_from_json.c  ui_win_from_json.c
libui/src/ui_log/: CMakeLists.txt  ui_log_el_left_button_hold.c  ui_log_el_left_button_pressed.c  ui_log_el_left_button_released.c  ui_log_el_pointer_enter.c  ui_log_el_pointer_exit.c  ui_log_el_pointer_stay.c  ui_log_el_right_button_hold.c  ui_log_el_right_button_pressed.c  ui_log_el_right_button_released.c  ui_log_el_scroll_down.c  ui_log_el_scroll_up.c  ui_log_key_pressed.c  ui_log_key_released.c  ui_log_mouse_button_down.c  ui_log_mouse_button_up.c  ui_log_mouse_motion.c  ui_log_window_closed.c  ui_log_window_focus_gained.c  ui_log_window_focus_lost.c  ui_log_window_moved.c  ui_log_window_resized.c
libui/src/ui_main/: CMakeLists.txt  ui_main_add_font_by_path.c  ui_main_add_function_by_id.c  ui_main_add_surface_by_path.c  ui_main_add_window.c  ui_main_add_window_opener_el.c  ui_main_closing_windows.c  ui_main_event_closing_windows.c  ui_main_event_lmb_pressed.c  ui_main_event_lmb_released.c  ui_main_event_pointer_moved.c  ui_main_event_rmb_pressed.c  ui_main_event_rmb_released.c  ui_main_event_scroll_down.c  ui_main_event_scroll_up.c  ui_main_fill_default_fonts.c  ui_main_fill_default_surfaces.c  ui_main_find_window_by_id.c  ui_main_get_font_by_id.c  ui_main_get_function_by_id.c  ui_main_get_surface_by_id.c  ui_main_handle_continious_event.c  ui_main_handle_event.c  ui_main_handle_keyboard_event.c  ui_main_handle_mouse_button_down.c  ui_main_handle_mouse_button_up.c  ui_main_handle_mouse_event.c  ui_main_handle_raycast.c  ui_main_handle_window_event.c  ui_main_init.c  ui_main_lmb_pressed.c  ui_main_lmb_released.c  ui_main_loop.c  ui_main_merge_layers.c  ui_main_open_texture.c  ui_main_pointer_moved.c  ui_main_remove_window_by_id.c  ui_main_rmb_pressed.c  ui_main_rmb_released.c  ui_main_save_texture.c  (+4 more)
libui/src/ui_prefab/: CMakeLists.txt  ui_prefab_get_pixel_pos.c  ui_prefab_get_pixel_size.c  ui_prefab_get_relative_pos.c  ui_prefab_get_relative_size.c  (+1 more)
src/: CMakeLists.txt  color_sliders.c  draw_fat_line.c  draw_func.c  draw_main_canvas_event.c  draw_with_selected_tool.c  get_value_from_slider.c  gm_generate_surfaces_id.c  gm_init.c  main.c  process_tmp_layer.c  tmp_main.c  ui_el_set_rel_size.c  ui_main_fill_default_functions.c
src/test/: draw_func.c  el1.c  el_text.c  initialization_m.c  initialization_w1.c  main.json  main_test.c  scroll_menu1.c  tmp_main.c
src/tools/: CMakeLists.txt  brush.c  ellipse.c  eraser.c  filler.c  hand.c  line.c  modes.c  pipette.c  rect.c  square.c  text.c  zoom.c
(+150 files in other folders)
